--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,23 @@
 <resources>
     <string name="app_name">Art Project</string>
-    <string name="image_view_description">Debt Image</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_application_name">Art Project</string>
+    <string name="tv_application_version">v. 1.0.0</string>
+    <string name="tv_author">Ovchinnikov Denis Olegovich</string>
+
+    <string name="tv_message_update">Update selected item</string>
+    <string name="tv_message_add">Add a new Person</string>
+    <string name="tv_i_owe">I OWE</string>
+    <string name="tv_owe_me">OWE ME</string>
+
+    <string name="btn_text_delete">Delete</string>
+    <string name="btn_text_edit">Edit</string>
+    <string name="btn_text_update">Update</string>
+    <string name="btn_text_add">Add</string>
+    <string name="btn_text_confirm">Confirm</string>
+
+    <string name="iv_desc_app_name">App Name</string>
+    <string name="iv_desc_dir">Status Image</string>
+
+    <string name="hnt_persons_name">Name</string>
 </resources>
