--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="iv_desc_app_name">App Name</string>
     <string name="iv_desc_dir">Status Image</string>
 
-    <string name="hnt_persons_name">Name</string>
+    <string name="hnt_persons_name">Name (30 sym at most)</string>
 </resources>
