--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,20 @@
 <resources>
     <string name="app_name">Debt Manager</string>
 
-    <string name="tv_app_name">Debt Manager</string>
-    <string name="tv_app_version">version 1.0.0</string>
-    <string name="tv_created">Created</string>
-    <string name="tv_created_by">by Ovchinnikov D.O.</string>
-    <string name="tv_created_in">in Android Studio IDE</string>
-    <string name="tv_vcs">Version Control System:</string>
-    <string name="tv_github"><u>GitHub</u></string>
+    <string name="tv_app_name" translatable="false">Debt Manager</string>
+    <string name="tv_app_version" translatable="false">version 1.0.0</string>
+    <string name="tv_created" translatable="false">Created</string>
+    <string name="tv_created_by" translatable="false">by Ovchinnikov D.O.</string>
+    <string name="tv_created_in" translatable="false">in Android Studio IDE</string>
+    <string name="tv_vcs" translatable="false">Version Control System:</string>
+    <string name="tv_github" translatable="false"><u>GitHub</u></string>
 
-    <string name="ttl_my_debt">I Owe</string>
-    <string name="ttl_their_debt">Owes Me</string>
+    <string name="tv_i_owe">I Owe</string>
+    <string name="tv_owe_me">Owe Me</string>
+    <string name="tv_owes_me">Owes Me</string>
 
-    <string name="tv_i_owe">I Take</string>
-    <string name="tv_owes_me">I Give</string>
+    <string name="tv_i_take">I Take</string>
+    <string name="tv_i_give">I Give</string>
 
     <string name="tv_msg_empty_list">List is Empty.</string>
     <string name="tv_msg_person_add">Add Person.</string>
