added LocaleHelper.java doesn't work correctly yet - have to restart the app.

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,20 +6,27 @@
     <string name="tv_i_take">Я Беру</string>
     <string name="tv_i_give">Я Даю</string>
     <string name="tv_msg_empty_list">Список пуст.</string>
-    <string name="tv_msg_person_add">Добавить персону.</string>
-    <string name="tv_msg_person_upd">Обновить персону?</string>
-    <string name="tv_msg_person_del">Удалить персону?</string>
-    <string name="tv_msg_entry_add">Добавить элемент.</string>
-    <string name="tv_msg_entry_upd">Обновить элемент.</string>
-    <string name="tv_msg_entry_del">Удалить элемент?</string>
+    <string name="tv_msg_person_add">Добавить личность.</string>
+    <string name="tv_msg_person_upd">Обновить личность?</string>
+    <string name="tv_msg_person_del">Удалить личность?</string>
+    <string name="tv_msg_entry_add">Добавить запись.</string>
+    <string name="tv_msg_entry_upd">Изменить запись.</string>
+    <string name="tv_msg_entry_del">Удалить запись?</string>
     <string name="btn_text_no">Нет</string>
     <string name="btn_text_yes">Да</string>
     <string name="btn_text_del">Удалить</string>
     <string name="btn_text_upd">Обновить</string>
     <string name="btn_text_add">Добавить</string>
-    <string name="value">₽</string>
     <string name="hnt_entry_comment">Комментарий</string>
     <string name="hnt_entry_amount">Сумма</string>
     <string name="hnt_person_name">Имя</string>
     <string name="tv_owe_me">Должны Мне</string>
+    <string name="tv_set_lang">Язык</string>
+    <string name="tv_desc_set_lang">установить язык интерфейса</string>
+    <string name="tv_set_info">Информация</string>
+    <string name="tv_set_info_desc">о приложении</string>
+    <string name="tv_set">Настройки</string>
+    <string name="tv_frag_title_settings">Настройки</string>
+    <string name="tv_frag_title_language">Язык</string>
+    <string name="tv_frag_title_information">Информация</string>
 </resources>
