--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,19 +26,28 @@
     <string name="tv_msg_entry_upd">Edit entry.</string>
     <string name="tv_msg_entry_del">Delete entry?</string>
 
-    <string name="tv_language_en" translatable="false">English</string>
-    <string name="tv_language_ru" translatable="false">Русский</string>
-    <string name="tv_desc_language_en" translatable="false">English (US)</string>
-    <string name="tv_desc_language_ru" translatable="false">Russian (RU)</string>
 
     <string name="tv_frag_title_settings">Settings</string>
     <string name="tv_frag_title_language">Language</string>
     <string name="tv_frag_title_information">Information</string>
 
+    <string name="tv_language_en" translatable="false">English</string>
+    <string name="tv_language_ru" translatable="false">Русский</string>
+    <string name="tv_desc_language_en" translatable="false">English (US)</string>
+    <string name="tv_desc_language_ru" translatable="false">Russian (RU)</string>
+
+    <string name="tv_theme_light">Light Theme</string>
+    <string name="tv_desc_theme_light">turn on Light Theme</string>
+    <string name="tv_theme_dark">Dark Theme</string>
+    <string name="tv_desc_theme_dark">turn on Dark Theme</string>
+
     <string name="tv_set_lang">Language</string>
-    <string name="tv_desc_set_lang">set interface language</string>
+    <string name="tv_desc_set_lang">choose interface language</string>
+    <string name="tv_set_theme">Theme</string>
+    <string name="tv_set_theme_desc">choose app theme</string>
     <string name="tv_set_info">Information</string>
     <string name="tv_set_info_desc">about this app</string>
+
 
     <string name="btn_text_no">No</string>
     <string name="btn_text_yes">Yes</string>
@@ -50,6 +59,7 @@
     <string name="iv_desc_total_amount" translatable="false">Total Amount Image</string>
     <string name="iv_desc_info" translatable="false">Info Image</string>
     <string name="iv_desc_person_status" translatable="false">Person Status Image</string>
+    <string name="iv_desc_person_item_options" translatable="false">Options Image</string>
     <string name="iv_desc_person_delete" translatable="false">Delete Image</string>
     <string name="iv_desc_person_edit" translatable="false">Edit Image</string>
     <string name="iv_desc_dec_debt" translatable="false">Decease Debt Image</string>
@@ -61,8 +71,9 @@
     <string name="iv_desc_setting_info" translatable="false">Setting Info Image</string>
     <string name="iv_desc_language_en" translatable="false">Language EN Image</string>
     <string name="iv_desc_language_ru" translatable="false">Language RU Image</string>
-    <string name="iv_desc_language_selected" translatable="false">Language Selected Image</string>
-    <string name="iv_desc_drag_handler" translatable="false">Drag Handler Image</string>
+    <string name="iv_desc_theme_light" translatable="false">Light Theme Image</string>
+    <string name="iv_desc_theme_dark" translatable="false">Dark Theme Image</string>
+    <string name="iv_desc_selected" translatable="false">Checkmark Item Selected Image</string>
 
     <string name="fab_desc_add_person" translatable="false">FAB Image</string>
 
@@ -80,6 +91,9 @@
 
     <string name="pref_locale_en" translatable="false">EN</string>
     <string name="pref_locale_ru" translatable="false">RU</string>
+
+    <string name="pref_theme_light" translatable="false">Light</string>
+    <string name="pref_theme_dark" translatable="false">Dark</string>
 
     <string name="toast_no_empty_fields_allowed">No empty fields allowed!</string>
 </resources>
