--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -44,4 +44,5 @@
     <string name="tv_desc_theme_dark">включить тёмную тему</string>
     <string name="tv_set_theme">Тема</string>
     <string name="tv_set_theme_desc">выбрать тему приложения</string>
+    <string name="btn_text_edt">Изменить</string>
 </resources>
