added options_menu.xml delete action in ActivityPersons.java. repositioned FAB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,6 @@
     <string name="pref_theme_dark" translatable="false">Dark</string>
 
     <string name="toast_no_empty_fields_allowed">No empty fields allowed!</string>
+
+    <string name="menu_title_delete">Delete</string>
 </resources>
