--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,12 +6,12 @@
     <string name="tv_i_take">Я беру</string>
     <string name="tv_i_give">Я даю</string>
     <string name="tv_msg_empty_list">Список пуст.</string>
-    <string name="tv_msg_person_add">Добавить личность.</string>
-    <string name="tv_msg_person_upd">Обновить личность?</string>
-    <string name="tv_msg_person_del">Удалить личность?</string>
-    <string name="tv_msg_entry_add">Добавить запись.</string>
-    <string name="tv_msg_entry_upd">Изменить запись.</string>
-    <string name="tv_msg_entry_del">Удалить запись?</string>
+    <string name="tv_msg_person_add_header">Добавить личность.</string>
+    <string name="tv_msg_person_del_header">Удалить личность?</string>
+    <string name="tv_msg_del_fill">Вы уверены? Это действие нельзя отмененить.</string>
+    <string name="tv_msg_entry_add_header">Добавить запись.</string>
+    <string name="tv_msg_entry_upd_header">Изменить запись.</string>
+    <string name="tv_msg_entry_del_header">Удалить запись?</string>
     <string name="btn_text_no">Нет</string>
     <string name="btn_text_yes">Да</string>
     <string name="btn_text_del">Удалить</string>
@@ -33,10 +33,10 @@
     <string name="tv_created">Создан</string>
     <string name="tv_created_by">Овчинниковым Д. О.</string>
     <string name="tv_created_in">в Android Studio IDE</string>
-    <string name="tv_vcs">Система Контроля Версий:</string>
+    <string name="tv_vcs">Система контроля версий:</string>
     <string name="tv_version">"версия: "</string>
     <string name="sb_item_removed">Запись Удалена.</string>
-    <string name="tv_msg_person_edit">Изменить личность.</string>
+    <string name="tv_msg_person_edit_header">Изменить личность.</string>
     <string name="toast_no_empty_fields_allowed">Все поля должны быть заполнены!</string>
     <string name="tv_theme_light">Светлая тема</string>
     <string name="tv_theme_dark">Тёмная тема</string>
@@ -46,4 +46,5 @@
     <string name="tv_set_theme_desc">выбрать тему приложения</string>
     <string name="btn_text_edt">Изменить</string>
     <string name="menu_title_delete">Удалить</string>
+    <string name="btn_text_cancel">Отмена</string>
 </resources>
