--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,14 +18,13 @@
     <string name="tv_i_give">I give</string>
 
     <string name="tv_msg_empty_list">List is empty.</string>
-    <string name="tv_msg_person_add">Add person.</string>
-    <string name="tv_msg_person_edit">Edit person.</string>
-    <string name="tv_msg_person_upd">Update person?</string>
-    <string name="tv_msg_person_del">Delete person?</string>
-    <string name="tv_msg_entry_add">Add entry.</string>
-    <string name="tv_msg_entry_upd">Edit entry.</string>
-    <string name="tv_msg_entry_del">Delete entry?</string>
-
+    <string name="tv_msg_person_add_header">Add person.</string>
+    <string name="tv_msg_person_edit_header">Edit person.</string>
+    <string name="tv_msg_person_del_header">Delete person?</string>
+    <string name="tv_msg_entry_add_header">Add entry.</string>
+    <string name="tv_msg_entry_upd_header">Edit entry.</string>
+    <string name="tv_msg_entry_del_header">Delete entry?</string>
+    <string name="tv_msg_del_fill">Are you sure? This cannot be undone.</string>
 
     <string name="tv_frag_title_settings">Settings</string>
     <string name="tv_frag_title_language">Language</string>
@@ -51,6 +50,7 @@
 
     <string name="btn_text_no">No</string>
     <string name="btn_text_yes">Yes</string>
+    <string name="btn_text_cancel">Cancel</string>
     <string name="btn_text_del">Delete</string>
     <string name="btn_text_upd">Update</string>
     <string name="btn_text_edt">Edit</string>
