--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Менеджер долгов</string>
-    <string name="tv_i_owe">Я должен</string>
+    <string name="tv_i_owe">Должен я</string>
+    <string name="tv_owe_me">Должны мне</string>
     <string name="tv_owes_me">Должен/должна мне</string>
     <string name="tv_i_take">Я беру</string>
     <string name="tv_i_give">Я даю</string>
-    <string name="tv_msg_empty_list">Список пуст.</string>
-    <string name="tv_msg_person_add_header">Добавить личность.</string>
-    <string name="tv_msg_person_del_header">Удалить личность?</string>
+    <string name="tv_msg_empty_list">Список пуст</string>
+    <string name="tv_msg_person_add_header">Добавить персону</string>
+    <string name="tv_msg_person_del_header">Удалить персону</string>
     <string name="tv_msg_del_fill">Вы уверены? Это действие нельзя отмененить.</string>
-    <string name="tv_msg_entry_add_header">Добавить запись.</string>
-    <string name="tv_msg_entry_upd_header">Изменить запись.</string>
-    <string name="tv_msg_entry_del_header">Удалить запись?</string>
+    <string name="tv_msg_entry_add_header">Добавить запись</string>
+    <string name="tv_msg_entry_upd_header">Изменить запись</string>
+    <string name="tv_msg_entry_del_header">Удалить запись</string>
     <string name="btn_text_no">Нет</string>
     <string name="btn_text_yes">Да</string>
     <string name="btn_text_del">Удалить</string>
@@ -20,7 +21,6 @@
     <string name="hnt_entry_comment">Комментарий</string>
     <string name="hnt_entry_amount">Сумма</string>
     <string name="hnt_person_name">Имя</string>
-    <string name="tv_owe_me">Должны мне</string>
     <string name="tv_set_lang">Язык</string>
     <string name="tv_desc_set_lang">выбрать язык интерфейса</string>
     <string name="tv_set_info">Информация</string>
@@ -35,8 +35,8 @@
     <string name="tv_created_in">в Android Studio IDE</string>
     <string name="tv_vcs">Система контроля версий</string>
     <string name="tv_version">"версия:\u0020"</string>
-    <string name="sb_item_removed">Запись Удалена.</string>
-    <string name="tv_msg_person_edit_header">Изменить личность.</string>
+    <string name="sb_item_removed">Запись удалена</string>
+    <string name="tv_msg_person_edit_header">Изменить персону</string>
     <string name="toast_no_empty_fields_allowed">Все поля должны быть заполнены!</string>
     <string name="tv_theme_light">Светлая тема</string>
     <string name="tv_theme_dark">Тёмная тема</string>
