--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -18,13 +18,13 @@
     <string name="tv_i_give">I give</string>
 
     <string name="tv_msg_empty_list">List is empty</string>
-    <string name="tv_msg_person_add_header">Add person</string>
-    <string name="tv_msg_person_edit_header">Edit person</string>
-    <string name="tv_msg_person_del_header">Delete person</string>
+    <string name="tv_msg_person_add_header">Add account</string>
+    <string name="tv_msg_person_edit_header">Edit account</string>
+    <string name="tv_msg_person_del_header">Delete account</string>
     <string name="tv_msg_entry_add_header">Add entry</string>
     <string name="tv_msg_entry_upd_header">Edit entry</string>
     <string name="tv_msg_entry_del_header">Delete entry</string>
-    <string name="tv_msg_del_fill">Are you sure? This cannot be undone.</string>
+    <string name="tv_msg_del_fill">Are you sure you want to delete this account? This cannot be undone.</string>
 
     <string name="tv_frag_title_settings">Settings</string>
     <string name="tv_frag_title_language">Language</string>
@@ -82,6 +82,7 @@
     <string name="hnt_person_name">Name</string>
     <string name="hnt_entry_amount">Amount</string>
     <string name="hnt_entry_comment">Comment</string>
+    <string name="err_empty_field">Fill in the field</string>
 
     <string name="lang_rus" translatable="false">Русский</string>
     <string name="lang_eng" translatable="false">English</string>
