--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -7,9 +7,9 @@
     <string name="tv_i_take">Я беру</string>
     <string name="tv_i_give">Я даю</string>
     <string name="tv_msg_empty_list">Список пуст</string>
-    <string name="tv_msg_person_add_header">Добавить персону</string>
-    <string name="tv_msg_person_del_header">Удалить персону</string>
-    <string name="tv_msg_del_fill">Вы уверены? Это действие нельзя отмененить.</string>
+    <string name="tv_msg_person_add_header">Добавить счёт</string>
+    <string name="tv_msg_person_del_header">Удалить счёт</string>
+    <string name="tv_msg_del_fill">Вы уверены, что хотите удалить этот счёт? Это действие нельзя отмененить.</string>
     <string name="tv_msg_entry_add_header">Добавить запись</string>
     <string name="tv_msg_entry_upd_header">Изменить запись</string>
     <string name="tv_msg_entry_del_header">Удалить запись</string>
@@ -36,7 +36,7 @@
     <string name="tv_vcs">Система контроля версий</string>
     <string name="tv_version">"версия:\u0020"</string>
     <string name="sb_item_removed">Запись удалена</string>
-    <string name="tv_msg_person_edit_header">Изменить персону</string>
+    <string name="tv_msg_person_edit_header">Изменить счёт</string>
     <string name="toast_no_empty_fields_allowed">Все поля должны быть заполнены!</string>
     <string name="tv_theme_light">Светлая тема</string>
     <string name="tv_theme_dark">Тёмная тема</string>
@@ -47,4 +47,5 @@
     <string name="btn_text_edt">Изменить</string>
     <string name="menu_title_delete">Удалить</string>
     <string name="btn_text_cancel">Отмена</string>
+    <string name="err_empty_field">Заполните поле</string>
 </resources>
