--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -48,4 +48,5 @@
     <string name="menu_title_delete">Удалить</string>
     <string name="btn_text_cancel">Отмена</string>
     <string name="err_empty_field">Заполните поле</string>
+    <string name="menu_title_edit">Изменить</string>
 </resources>
